--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@ table {
 }
 .tables {
     margin-top: 20px;
+    width: 60%;
 }
 .tables table:nth-child(2n) {
     margin: 10px 0;
@@ -24,33 +25,6 @@ th {
 *** modal
 */
 
-.modal__overlay {
-    position: fixed;
-    overflow: hidden;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    background-color: rgba(0, 0, 0, 0);
-    transition: background-color .3s ease-in-out;
-}
-.modal__content {
-    box-shadow: 0px 0px 10px 1px black;
-    width: 500px;
-    border-radius: 5px;
-    background-color: white;
-    margin: 0 auto;
-    overflow: auto;
-    /* transform: translateY(-150px); */
-    transform: translateY(150px);
-    opacity: 0;
-    transition: transform .3s ease-in-out, opacity .3s ease-in-out;
-}
-
-.overflowHidden {
-    overflow: hidden !important;
-}
-
 .modal.open .modal__overlay,
 .modal.open .modal__content {
     opacity: 1;
@@ -70,8 +44,7 @@ th {
 }
 
 .modal.open .modal__content {
-    /* transform: translateY(150px); */
-    opacity: 1;
+    transform: translateY(150px);
 }
 
 .modal.open .modal__overlay {
@@ -79,12 +52,36 @@ th {
 }
 
 .modal.hide .modal__content {
-    /* transform: translateY(-150px); */
-    opacity: 0;
+    transform: translateY(-150px);
 }
 
 .modal.hide .modal__overlay {
     background-color: rgba(0, 0, 0, 0);
+}
+
+.modal__overlay {
+    position: fixed;
+    overflow: hidden;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background-color: rgba(0, 0, 0, 0);
+    transition: background-color .3s ease-in-out;
+}
+.modal__content {
+    box-shadow: 0px 0px 10px 1px black;
+    width: 500px;
+    border-radius: 5px;
+    background-color: white;
+    margin: 0 auto;
+    overflow: auto;
+    transform: translateY(-150px);
+    transition: transform .3s ease-in-out;
+}
+
+.overflowHidden {
+    overflow: hidden !important;
 }
 
 .modal__header {
@@ -128,3 +125,40 @@ th {
     opacity: 0.9;
     cursor: pointer;
 }
+
+/*
+*** loader
+*/
+
+.lds-dual-ring {
+    display: inline-block;
+    width: 80px;
+    height: 80px;
+    position: absolute;
+    top: 40%;
+    left: 25%;
+}
+.loaderForTodo {
+    top: 40%;
+    left: 45%; 
+}
+.lds-dual-ring:after {
+    content: " ";
+    display: block;
+    width: 64px;
+    height: 64px;
+    margin: 8px;
+    border-radius: 50%;
+    border: 6px solid blue;
+    border-color: blue transparent blue transparent;
+    animation: lds-dual-ring 1.2s linear infinite;
+}
+@keyframes lds-dual-ring {
+    0% {
+      transform: rotate(0deg);
+    }
+    100% {
+      transform: rotate(360deg);
+    }
+}
+  
